option java_outer_classname = "LCCANDataReportSetting";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.monitor";


message CANDataReportSetting{
	optional	int32	engineType		=1;
	optional	int32	vehType		    =2;
}
